Enhance app review analysis dashboard with comprehensive visualizations
- Add responsive dashboard layout and fix width issues in Plotly charts
- Improve time trend analysis and version comparison visualizations
- Add sentiment distribution pie charts for version comparisons
- Create comprehensive HTML dashboard with 7 analysis tabs
- Implement interactive tab navigation with proper resize handling
- Add AI-generated insights section with actionable recommendations
- Clean up old experimental notebooks

--- a/.env.template
+++ b/.env.template
@@ -4,16 +4,23 @@
 APP_ID=com.yourapp.android  # Google Play Store app ID
 APP_NAME=Your App Name      # Display name for app (used in reports and when in mock mode)
 APP_STORE=google_play       # Supported values: google_play, apple_app_store
+
+# Data Source Configuration
 USE_MOCK_DATA=true          # Set to true to use mock data, false to fetch real data
+FORCE_REFRESH=false         # Set to true to force fetching fresh data even if existing data is available
 CLEAR_COLLECTION=true       # Set to true to clear existing collection before adding new data
 
 # API Keys
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Analysis Configuration
-MAX_REVIEWS=1000
-START_DATE=1 year ago
-END_DATE=now
+MAX_REVIEWS=1000            # Maximum number of reviews to fetch/process
+START_DATE=1 year ago       # How far back to fetch reviews (e.g., '1 year ago', '6 months ago')
+END_DATE=now                # End date for review collection (e.g., 'now', '2023-12-31')
+
+# File Paths (optional, defaults will be used if not specified)
+# RAW_DATA_PATH=src/data/reviews.csv              # Path to store raw review data
+# PROCESSED_DATA_PATH=src/data/processed_reviews.csv  # Path to store processed review data
 
 # System Settings
 TOKENIZERS_PARALLELISM=false  # Set to false to prevent huggingface tokenizers warning
